<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginFragment"
    android:orientation="vertical"
    tools:context=".View.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:backgroundTint="#fff"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/body_login"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/edit"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColorHint="#605C5C" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColorHint="#605C5C" />

            <Button
                android:id="@+id/btn"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/sing_in"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/or_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/btn1"
                android:layout_marginTop="40dp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="#605C5C"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="OR"
                    android:textSize="15sp"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/btn1"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sign_in_gg"
                android:drawablePadding="4dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/no_have_accout"
                    android:textColor="#fff"
                    android:textSize="20sp"

                    />
                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    android:background="#FF5722"
                    android:textColor="#2136AE"
                    android:textSize="18sp"
                    android:layout_marginTop="-6dp"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:background="#FF5722"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>